# MechaVision

./: .TestGrabCut.cpp.swp  .detect_obstacles.cpp.swo  .detect_obstacles.cpp.swp  .detect_obstacles_v2.cpp.swl  .detect_obstacles_v2.cpp.swm  .detect_obstacles_v2.cpp.swn  .detect_obstacles_v2.cpp.swo  .detect_obstacles_v2.cpp.swp  .main.cpp.swp  CMakeLists.txt  GrabCut.cpp  GrabCut.h  ObjectDetector.cpp  TestGrabCut.cpp  cpp  detect_obstacles.cpp  detect_obstacles_v2.cpp  stereo_matching.cpp  stereo_matching.hpp  train_dnn_mmod.cpp
AutoThresh/: .autoThresh.cpp.swp  CMakeLists.txt  main.cpp
DetectWithHog/: CMakeLists.txt  main.cpp
KalmanFilter/: unscentedKalmanFilter.py
ManualControl/: ManualControl.pro  ManualControl.py  ManualControlForm.py  Test.py  mainwindow.ui  manualcontrol.ui
TrainDNN/: .CMakeLists.txt.swp  .train_dnn_mmod_obstacles.cpp.swo  .train_dnn_mmod_obstacles.cpp.swp  CMakeLists.txt  train_dnn_mmod_obstacles.cpp
TrainLandmarks/: train_obstacle_landmarks.cpp
